[wcag] Fix list view header contrast

--- a/ckanext/nhm/theme/less/multisearch.less
+++ b/ckanext/nhm/theme/less/multisearch.less
@@ -687,6 +687,10 @@
     & .record-res, & .record-name {
       align-self: start;
     }
+
+    & a {
+      color: @primary2;
+    }
   }
 
   & .record-body {
